--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   
+  
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,12 +18,7 @@
   }
 }
 
+
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(208, 215, 213); 
 }
